[tool.poetry]
name = "quiz-taker"
version = "1.0"
description = "Asks the user a series of multiple choice questions by topic area, and keeps track of progress."
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
license = "MIT"
readme = "README.md"
packages = [{include = "quiz_taker"}]

[tool.poetry.dependencies]
python = "^3.8"
npyscreen = "^4.10.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
